# GoodPhotons

./: .gitignore  CLAUDE.md  CMakeLists.txt  FTSL.md  README.md  TODO.md  design.md  gpu-backward-fast.md  gpu-fallbacks.md  known-issues.md  todo.txt  wavefront-todo.txt
docs/: scene-language.md
scenes/: _beams_hg_decorr.ftsl  _cam5b_rec.ftsl  _cam5b_trk.ftsl  _camA_travel.ftsl  _ellipsoid_test.ftsl  _env_bgonly.ftsl  _env_cornell.ftsl  _env_fog.ftsl  _fluo_cornell.ftsl  _fog_cornell.ftsl  _fog_cornell_g.ftsl  _gpumtest.ftsl  _grp_a.ftsl  _grp_b.ftsl  _rainbow_beams_decorr.ftsl  _rainbow_test.ftsl  _record_bind.ftsl  _record_override.ftsl  _record_rough.ftsl  _record_scalar.ftsl  _record_test.ftsl  _record_value.ftsl  _rgb_neutral.ftsl  _shear_a.ftsl  _shear_b.ftsl  _shear_c.ftsl  _spot_cornell.ftsl  absolute.ftsl  cornell.ftsl  crystalloop.ftsl  cube.fbx  cylindercaps.ftsl  cylinderlight.ftsl  dolly.ftsl  envlight.ftsl  envmap.ftsl  expo.ftsl  fbxcube.ftsl  fisheye.ftsl  flythrough.ftsl  (+33 more)
src/: airtight.h  backward.h  bdpt.h  bvh.h  camera.h  color.h  envmap.h  fbx.h  fbx_load.cpp  ftsl.h  geometry.h  gltf.h  grin.h  hero.h  implicit.h  isomesh.h  lens.h  lights.h  linalg.h  livewindow.cpp  livewindow.h  main.cpp  materials.h  medium_stack.h  mesh.h  pattern.h  phase.h  photonmap.h  photonmap_render.h  pov_functions.h  pov_noise.h  priority_audit.h  rainbow.h  raster.h  raster_cuda.cu  raster_cuda.h  record.h  render.h  render_cuda.cu  render_cuda.h  (+14 more)
src/gpda/: ftsl_reduce.hpp  ftsl_scene.gen.cpp  ftsl_shim.hpp  gpda_lexer.hpp  pool.hpp  tokenized.cpp  tokenized.hpp
tools/: browse.py  csv_to_table.py  dag.txt  frame_scrubber.html  iso_generator.html  iso_render.html  klein_explorer.html  make_mesh.py  mitsuba_to_ftsl.py  obj_sequence_to_video.py  plot_digitizer.py  pov_functions_gen.py  pov_noise_gen.py  render_isos.py  repair_mesh.py  ri_nk_to_reflectance.py  settle.py  settle_scene.py  showcase_flyby.py  splib_to_reflectance.py
tools/loom/: DESIGN.md  README.md  TODO.md
tools/loom/examples/: OSCILLATE_GRAMMAR.md  canvas_loop.py  gyroid_loop.py  gyroid_nd.py  material_loop.py  mesh_bake.py  open_timeline.py  pov_loop.py  preview_server.py  ribbon_loop.py  scribble_loop.py  shared_pattern.py  transform_video.py
tools/loom/loom/: __init__.py  audio.py  canvas.py  color.py  data.py  drive.py  ftsl_emit.py  interp.py  iso.py  ladder.py  material.py  mathnd.py  mcubes.py  pov.py  pov_grad.py  pov_nd.py  preview.py  record.py  scene.py  spatial.py  sweep.py  transform.py  xvideo.py
tools/loom/loom/grammar/: __init__.py  _gpda.py  bindings.py  emit_cpp.py  ftsl.epeg  ftsl_scene.epeg  reader.py  spectrum.py  values.py
tools/loom/loom/signals/: __init__.py  core.py  periodic.py  timeline.py  vector.py
tools/loom/tests/: test_affine.py  test_audio.py  test_canvas.py  test_color_parse.py  test_dag_and_color.py  test_dataset_transform.py  test_emit.py  test_fieldcurve.py  test_foundation.py  test_grammar.py  test_grammar_bindings.py  test_grammar_material.py  test_grammar_record.py  test_grammar_scene.py  test_grammar_spectrum.py  test_grammar_values.py  test_gridinterp.py  test_gyroid_nd.py  test_iso.py  test_ladder.py  test_looping.py  test_material.py  test_math.py  test_mcubes.py  test_pov.py  test_pov_grad.py  test_preview.py  test_rbf.py  test_record.py  test_spatial.py  test_sweep.py  test_tracks.py  test_transform.py  test_vecfields.py  test_xvideo.py
